# teoroo-journal-club

./: AUTHORS.rst  Dockerfile  MANIFEST.in  Pipfile  README.rst  benchmark.sh  run.py  run.sh  setup.py
app/: AUTHORS.rst  LICENSE  MANIFEST.in  Pipfile  README.rst  benchmark.sh  run.py  setup.py
app/src/c/: fib.c  fib.h  fibpy.c
app/src/cpp/: fib.cpp
app/src/fortran/: fib.f03
app/src/python/: fib.py  tryout.py
app/src/rust/: Cargo.toml
app/src/rust/src/: fib.rs
src/: fib.cpp  fib.f03  fib.py
src/c/: fib.c  fibpy.c
src/cpp/: fib.cpp
src/fortran/: fib.f03
src/python/: fib.py
src/rust/: Cargo.toml  fib.rs
src/rust/src/: fib.rs  lib.rs
