[package]
name = "rust"
version = "0.1.0"
authors = ["Benjamin Bolbrinker <benjamin.bolbrinker@kemi.uu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "rust_rs"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
